@@ -81,3 +81,11 @@ HORAS TRABALHADAS: 7h
 - Inclusao de actions para listagem de FEEDS e QUEUE
 
 HORAS TRABALHADAS: 4h
+
+==========
+23/03/2009
+==========
+
+- Atualizações no Dashboard
+
+HORAS TRABALHADAS: 2h
